# guidebook

./: .gitignore  .markdownlint-cli2.yaml  CONTRIBUTING.md  README.md  TRANSLATION.md  conf.py  index.md  pyproject.toml
.github/workflows/: docs.yml
_templates/: globaltoc.html  language_switcher.html
l10n/cn/: CONTRIBUTING.md  CONTRIBUTORS.md
l10n/cn/growing-contributors/: community-manager-self-care.md
locales/zh_CN/LC_MESSAGES/: CODE_OF_CONDUCT.po  CONTRIBUTING.po  CONTRIBUTORS.po  LICENSE.po  README.po  TRANSLATION.po  index.po  presenting-the-open-source-way.po  sphinx.po
locales/zh_CN/LC_MESSAGES/attracting-users/: README.po  building-diverse-open-source-communities-by-making-them-includive-first.po  communication-norms-in-open-source-software-projects.po
locales/zh_CN/LC_MESSAGES/getting-started/: README.po  building-a-strategy.po  community-101.po  essentials-of-building-a-community.po  new-project-checklist.po
locales/zh_CN/LC_MESSAGES/growing-contributors/: README.po  community-manager-self-care.po  constructing-an-onboarding-experience.po  creating-a-culture-of-mentorship.po  from-users-to-contributors.po  project-and-community-governance.po  understanding-community-roles.po  what-is-a-contribution.po
locales/zh_CN/LC_MESSAGES/guiding-participants/: README.po  incentivizing-and-rewarding-participants.po  why-people-participate-in-open-source-communities.po
locales/zh_CN/LC_MESSAGES/measuring-success/: README.po  announcing-software-releases.po  (+2 more)
tools/i18n/: catalog_status.py  migrate_cn_markdown.py  normalize_po_files.py
